--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,15 @@
 {
-  "extends": "@tsconfig/node14/tsconfig.json",
   "compilerOptions": {
     "isolatedModules": true,
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
     "lib": ["ES2020", "DOM"],
     "outDir": "dist",
-    "declaration": false
+    "declaration": false,
+    "target": "es2020",
+
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["./src/**/*"],
   "ts-node": {
